--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "mocha --timeout 2000000 test/**/*.spec.js",
     "test-channel": "mocha --timeout 2000000 test/resourses/channel.spec.js",
-    "test-playlist": "mocha --timeout 2000000 test/resourses/playlist.spec.js"
+    "test-playlist": "mocha --timeout 2000000 test/resourses/playlist.spec.js",
+    "lint-fix": "eslint --fix --ext .js,.ts ./",
+    "lint": "eslint --ext .js,.ts ./"
   },
   "keywords": [
     "youtube",
@@ -24,16 +26,20 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
-    "chai": "^4.2.0",
-    "cheerio": "^1.0.0-rc.3",
-    "html-entities": "^1.2.1",
-    "is-url": "^1.2.4",
-    "mocha": "^6.1.4",
-    "moment": "^2.24.0",
     "querystring": "^0.2.0"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/FreeTubeApp/yt-channel-info"
+  },
+  "devDependencies": {
+    "eslint": "^7.3.1",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1"
   }
 }
