--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "Grab YouTube channel information without any official API",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --timeout 2000000 test/**/*.spec.js",
-    "test-channel": "mocha --timeout 2000000 test/resourses/channel.spec.js",
-    "test-playlist": "mocha --timeout 2000000 test/resourses/playlist.spec.js",
+    "test": "jest --watchAll --verbose",
     "lint-fix": "eslint --fix --ext .js,.ts ./",
     "lint": "eslint --ext .js,.ts ./"
   },
@@ -40,6 +38,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1"
+    "eslint-plugin-standard": "^4.0.1",
+    "jest": "^27.0.4"
   }
 }
