--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --watchAll --verbose",
+    "test-ci": "jest --verbose --ci",
     "lint-fix": "eslint --fix --ext .js,.ts ./",
     "lint": "eslint --ext .js,.ts ./"
   },
