--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "files": [
     "index.js",
+    "index.d.ts",
     "app/"
   ],
   "scripts": {
@@ -44,5 +45,6 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "jest": "^27.0.4"
-  }
+  },
+  "types": "index.d.ts"
 }
