Fix linter issues, add linter workflow (#88)
* fix lint issues

* add linter workflow

* move linter to workflow directory

* use npm

* use npm install

* remove typescript from lint

* set jest environment to true

* use off and warn instead of 0 and 1

* Update setup-node action for workflow

Co-authored-by: absidue <48293849+absidue@users.noreply.github.com>

Co-authored-by: absidue <48293849+absidue@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "scripts": {
     "test": "jest --watchAll --verbose --coverage",
     "test-ci": "jest --verbose --ci  --coverage",
-    "lint-fix": "eslint --fix --ext .js,.ts ./",
-    "lint": "eslint --ext .js,.ts ./"
+    "lint-fix": "eslint --fix --ext .js ./",
+    "lint": "eslint --ext .js ./"
   },
   "keywords": [
     "youtube",
